--- a/styles/header.css
+++ b/styles/header.css
@@ -1,6 +1,6 @@
 .cabeçalho__menu-hamburguer {
-    width: 24px;
-    height: 24px;
+    width: 1.5rem;
+    height: 1.5rem;
     background-image: url("../img/Menu.png");
     background-repeat: no-repeat;
     background-position: center;
@@ -23,7 +23,7 @@
     justify-content: space-between;
     position: relative;
     width: 100%;
-    height: 3em;
+    height: 3rem;
 }
 
 .container {
@@ -32,8 +32,8 @@
 }
 
 .container__imagem {
-    padding: 0.5em;
-    height: 1.5em;
+    padding: 0.5rem;
+    height: 1.5rem;
 }
 
 .lista-menu {
@@ -52,19 +52,19 @@
 }
 
 .lista-menu__titulo, .lista-menu__item {
-    padding: 1em;
+    padding: 1rem;
     background-color: var(--branco);
 }
 
 .lista-menu__titulo {
     color: var(--laranja);
     font-weight: 700;
-    font-size: 16px;
+    font-size: 1rem;
 }
 
 .lista-menu__link {
     text-decoration: none;
-    font-size: 16px;
+    font-size: 1rem;
     background: var(--azul-degrade);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -84,6 +84,13 @@
     display: none;
 }
 
+@media screen and (min-width: 768px) {    
+    .cabeçalho__menu-hamburguer {
+        width: 0.8rem;
+        height: 0.8rem;
+    }
+}
+
 
 @media screen and (min-width: 1024px) {
     .cabeçalho {
@@ -91,13 +98,13 @@
     }
 
     .container__imagem {
-        height: 1.8em;
+        height: 1.8rem;
     }
 
     .container__titulo {
         display: block;
         font-family: var(--fonte-secundario);
-        font-size: 30px;
+        font-size: 1.8rem;
         font-weight: 400;
     } 
 
@@ -108,7 +115,7 @@
 
     .opções {
         display: flex;
-        margin: 0 1.5em;
+        margin: 0 1.5rem;
     }
 
     .opções__botão:checked~ .opções__rotulo > .opções__item {
@@ -117,7 +124,7 @@
     }
 
     .opções__item {
-        padding: 2em 1em;
+        padding: 2rem 1rem;
         text-transform: uppercase;
     }
 
@@ -156,11 +163,11 @@
     }
 
     .opções__categoria {
-        margin-left: 1.5em;
+        margin-left: 1.5rem;
     }
 
     .botão__carrinho {
-        margin-right: 1.5em;
+        margin-right: 1.5rem;
     }
 
     .opções__link-desktop {
@@ -170,7 +177,7 @@
     @media screen and (min-width: 1728px) {
         .opções {
             flex-wrap: wrap;
-            margin-right: 29em;
+            margin-right: 29rem;
         }
 
         .container {
@@ -178,7 +185,7 @@
         }
 
         .lista-menu {
-            padding-left: 2em;
+            padding-left: 2rem;
         }
 
         .opções__botão:checked ~ label .opções__categoria {
@@ -193,8 +200,8 @@
 
         .opções__link-desktop {
             display: block;
-            margin-right: 2em;
-            font-size: 20px;
+            margin-right: 2rem;
+            font-size: 1.2rem;
         }
     }
 }
