--- a/styles/maisvendidos.css
+++ b/styles/maisvendidos.css
@@ -1,11 +1,11 @@
 .mais-vendidos__titulo {
     color: var(--laranja);
-    font-size: 18px;
+    font-size: 1rem;
     font-weight: 700;
     background-color: var(--branco);
     text-align: center;
     text-transform: uppercase;
-    padding: 1em 0 0.5em 0;
+    padding: 1rem 0 0.5rem 0;
 }
 
 .swiper-slide img {
@@ -18,18 +18,18 @@
 
 .swiper-pagination {
     position: initial;
-    margin: 0.5em 0 0.7em 0;
+    margin: 0.5rem 0 0.7rem 0;
 }
 
 .card__mais-vendidos {
     display: grid;
     grid-template-columns: auto auto;
-    row-gap: 1em;
-    padding: 0.7em;
+    row-gap: 1rem;
+    padding: 0.7rem;
     background: var(--branco);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
-    margin: 1em;
+    margin: 1rem;
     flex-wrap: nowrap;
 }
 
@@ -43,7 +43,7 @@
 .mais-vendidos__autor {
     grid-column: 1;
     grid-row: 3;
-    font-size: 18px;
+    font-size: 1rem;
     font-weight: 700;
     color: #002F52;
 }
@@ -51,18 +51,23 @@
 .mais-vendidos__texto {
     grid-column: 1;
     grid-row: 4;
-    font-size: 14px;
+    width: 85%;
+    font-size: 0.8rem;
     color: rgba(0, 0, 0, 0.85);
 }
 
 .mais-vendidos__imagem {
     grid-column: 2;
     grid-row: 1 / span 4;
+    width: 100%;
 }
 
 .botões {
     grid-column: 1;
     grid-row: 5;
+    display: flex;
+    align-items: center;
+    gap: 1.3rem;
 }
 
 .card__botão {
@@ -70,29 +75,36 @@
     font-weight: 700;
     text-decoration: none;
     background-color: var(--laranja);
-    padding: 1em;
+    padding: 1rem;
     text-align: center;
-    margin: 1em 0 0.5em;
+    margin: 1rem 0 0.5rem;
 }
 
-.botões__item {
-    margin: 1.5em 1em 0 0.5em;
+.botões__item img {
+    width: 80%;
+}
+
+@media screen and (min-width: 768px) {
+    .card__mais-vendidos {
+        width: 40%;
+        margin: 1rem auto;
+    }
 }
 
 @media screen and (min-width: 1024px) {
     .mais-vendidos__titulo {
-        font-size: 26px;
-        padding: 1.5em 0 0.5em;
+        font-size: 1.6rem;
+        padding: 1.5rem 0 0.5rem;
     }
 
     .card__mais-vendidos {
-        width: 55%;
-        margin: 2em auto;
-        row-gap: 0.2em;
+        width: 50%;
+        margin: 2rem auto;
+        row-gap: 0.2rem;
     }
 
     .mais-vendidos__texto {
-        margin-right: 2em;
+        margin-right: 2rem;
     }
 
     @media screen and (min-width: 1728px) {
@@ -101,7 +113,7 @@
         }
     
         .mais-vendidos__titulo {
-            padding: 1.7em 0 0.5em;
+            padding: 1.7rem 0 0.5rem;
         }
 
         .card__mais-vendidos {
@@ -111,11 +123,17 @@
         }
 
         .card__titulo {
-            font-size: 32px;
+            font-size: 2rem;
+        }
+
+        .mais-vendidos__autor {
+            font-size: 1.1rem;
         }
 
         .mais-vendidos__texto {
-            width: 70%;
+            width: 85%;
+            font-size: 1.1rem;
+            margin-right: 0;
         }
     }
 }
