--- a/styles/rodapé.css
+++ b/styles/rodapé.css
@@ -4,12 +4,12 @@ hr {
 
 .rodapé {
     background-color: var(--branco);
-    padding: 1em;
+    padding: 1rem;
 }
 
 .rodapé__texto {
     color: var(--preto);
-    padding: 1em;
+    padding: 1rem;
 }
 
 .lista-rodapé {
@@ -20,7 +20,7 @@ hr {
     .rodapé {
         display: flex;
         justify-content: space-around;
-        padding: 1.5em;
+        padding: 1.5rem;
     }
 
     .lista-rodapé {
@@ -29,7 +29,7 @@ hr {
     
     .rodapé__texto {
         padding: 0;
-        font-size: 24px;
+        font-size: 1.5rem;
     }
     
     .lista-rodapé__título {
@@ -40,25 +40,25 @@ hr {
     .lista-rodapé__item {
         display: flex;
         align-items: center;
-        margin: 1em 0;
+        margin: 1rem 0;
     }
 
     .lista-rodapé__link {
         text-decoration: none;
-        font-size: 14px;
+        font-size: 0.8rem;
         color: var(--cinza-escuro);
-        padding-left: 0.5em;
+        padding-left: 0.5rem;
     }
 }
 
 @media screen and (min-width: 1728px) {
     .rodapé {
         justify-content: space-evenly;
-        padding: 2em;
+        padding: 2rem;
     }
 
     .lista-rodapé {
         border-left: 1px solid var(--cinza);
-        padding-left: 1em;
+        padding-left: 1rem;
     }
 }
