--- a/styles/tópicos.css
+++ b/styles/tópicos.css
@@ -1,6 +1,6 @@
 .topicos {
     background: var(--azul-degrade);
-    padding: 1em 0;
+    padding: 1rem 0;
 }
 
 .topicos__titulo {
@@ -8,7 +8,7 @@
     font-weight: 300;
     text-transform: uppercase;
     text-align: center;
-    margin-bottom: 1em;
+    margin-bottom: 1rem;
 }
 
 .topicos__lista {
@@ -18,16 +18,16 @@
 }
 
 .topicos__item {
-    margin: 2em 0.5em;
+    margin: 2rem 0.5rem;
 }
 
 .topicos__item-mobile {
-    margin: 2em 0.5em;
+    margin: 2rem 0.5rem;
 }
 
 .topicos__link {
     color: var(--branco);
-    padding: 1em;
+    padding: 1rem;
     background-color: var(--laranja);
     text-decoration: none;
     font-weight: 700;
@@ -37,6 +37,18 @@
     display: none;
 }
 
+@media screen and (min-width: 768px) {
+    .topicos {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .topicos__lista {
+        width: 70%;
+    }
+}
+
 @media screen and (min-width: 1024px) {
     .topicos__item-mobile {
         display: none;
@@ -44,51 +56,55 @@
 
     .topicos__item-tablet {
         display: block;
-        margin: 2.5em 0.7em;
+        margin: 2.5rem 0.7rem;
     }
 
     .topicos__lista {
         width: 70%;
-        padding: 1em;
+        padding: 1rem;
         margin: 0 auto;
     }
 
     .topicos__titulo {
-        font-size: 24px;
+        font-size: 1.5rem;
         font-weight: 300;
-        padding: 0.5em;
+        padding: 0.5rem;
         margin-bottom: 0;
     }
 
     .topicos__item {
-        margin: 2.5em 0.7em;
+        margin: 2.5rem 0.7rem;
     }
 
     .topicos__link {
-        font-size: 24px;
-        padding: 1em;
+        font-size: 1.5rem;
+        padding: 1rem;
     }
 }
 
 @media screen and (min-width: 1728px) {
     .topicos {
-        padding: 3em;
+        padding: 3rem;
     }
     
     .topicos__titulo {
-        font-size: 32px;
+        font-size: 2rem;
         font-weight: 300;
-        margin: 1em;
+        margin: 1rem;
         padding: 0;
     }
 
     .topicos__lista {
-        padding: 0;
-        width: 50%;
-        margin-left: 25em;
+        width: 48%;
     }
 
     .topicos__link {
-        padding: 1em;
+        padding: 1.5rem;
+    }
+}
+
+@media screen and (min-width: 1920px) {
+    .topicos__lista {
+        width: 35%;
     }
 }
